# homie

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/examples/: dino.toml
res/dino_sprites/: credit.txt
src/: error.rs  parse.rs
src/config/: cli.rs  default.rs  mod.rs
src/render/: helpers.rs  mod.rs  state.rs
src/render/gif/: frame.rs  mod.rs  paintable.rs
