[package]
name = "homie"
version = "0.2.1"
authors = ["Hannah Fluch <hannah@diefluchs.at>"]
description = "An interactive coding buddy"
repository = "https://github.com/hannahfluch/homie"
keywords = ["homie", "animation", "gtk4", "interactive"]
categories = ["command-line-utilities", "gui"]
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9.6", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"

clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
fastrand = "2.3.0"

serde = "1.0.215"
serde_derive = "1.0.215"
confy = "0.6.1"
regex-lite = "0.1.6"

thiserror = "2.0.3"
image = {version = "0.25.5", default-features = false, features = ["gif"]}

[profile.release]
opt-level = "z"
strip = "symbols"
